--- a/app/src/main/res/layout/activity_tetris.xml
+++ b/app/src/main/res/layout/activity_tetris.xml
@@ -6,13 +6,32 @@
     android:layout_height="match_parent"
     tools:context="ua.odessa.tol2000.datetrisclassic.TetrisActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:onClick="initClick"
+        android:text="Init"
+        tools:layout_editor_absoluteX="16dp"
+        android:layout_marginTop="130dp"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="365dp"
+        android:layout_height="36dp"
+        android:text="Started"
+        tools:layout_editor_absoluteX="6dp"
+        android:layout_marginTop="-33dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_editor_absoluteY="-3dp" />
+
+    <GridView
+        android:layout_width="370dp"
+        android:layout_height="401dp"
+        android:layout_marginTop="42dp"
+        android:numColumns="10"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="5dp"
+        android:id="@+id/gridView" />
 </android.support.constraint.ConstraintLayout>
