--- a/app/src/main/res/layout/activity_tetris.xml
+++ b/app/src/main/res/layout/activity_tetris.xml
@@ -1,37 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="ua.odessa.tol2000.datetrisclassic.TetrisActivity">
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="initClick"
-        android:text="Init"
-        tools:layout_editor_absoluteX="16dp"
-        android:layout_marginTop="130dp"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="365dp"
-        android:layout_height="36dp"
-        android:text="Started"
-        tools:layout_editor_absoluteX="6dp"
-        android:layout_marginTop="-33dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteY="-3dp" />
+        android:id="@+id/textViewStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:id="@+id/buttonLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textViewStatus"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="leftButtonClick"
+        android:text="@string/leftButtonText" />
 
     <GridView
-        android:layout_width="370dp"
-        android:layout_height="401dp"
-        android:layout_marginTop="42dp"
-        android:numColumns="10"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="5dp"
-        android:id="@+id/gridView" />
-</android.support.constraint.ConstraintLayout>
+        android:id="@+id/gridView"
+        android:layout_width="220dp"
+        android:layout_height="440dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:numColumns="10" />
+
+</RelativeLayout>
