--- a/app/src/main/res/layout/activity_tetris.xml
+++ b/app/src/main/res/layout/activity_tetris.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
@@ -24,13 +25,13 @@
         android:onClick="leftButtonClick"
         android:text="@string/leftButtonText" />
 
-    <GridView
-        android:id="@+id/gridView"
+    <view
+        android:id="@+id/tetrisView"
+        class="ua.odessa.tol2000.datetrisclassic.TetrisGrid"
         android:layout_width="220dp"
         android:layout_height="440dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:numColumns="10" />
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
