--- a/app/src/main/res/layout/activity_tetris.xml
+++ b/app/src/main/res/layout/activity_tetris.xml
@@ -2,18 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textViewStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/buttonLeft"
@@ -26,7 +26,7 @@
         android:text="@string/leftButtonText" />
 
     <view
-        android:id="@+id/tetrisView"
+        android:id="@+id/tetrisGrid"
         class="ua.odessa.tol2000.datetrisclassic.TetrisGrid"
         android:layout_width="220dp"
         android:layout_height="440dp"
